--- a/Site/public/dash-estatica/dash-cadastros.html
+++ b/Site/public/dash-estatica/dash-cadastros.html
@@ -186,8 +186,9 @@
 
         <button onclick="atualizarFeed()" class="btn_mural_funcionarios" id="btn_funcionarios">Usuários
           cadastrados</button>
+          <div class="top10">
         <div id="feed_container" class="feed-container"></div>
-
+          </div>
 
         <button onclick="atualizarFeed()" style="display: none;" id="atualizar" class="atualizarMural">Atualizar
           Feed</button>
