--- a/Site/public/dash-estatica/graficos.html
+++ b/Site/public/dash-estatica/graficos.html
@@ -159,7 +159,7 @@
 
 					<div class="item-regua alerta-frio">
 						<h3>Consumo CPU</h2>
-							<h4>Alerta abaixo uso</h4>
+							<h4>Alerta baixo uso</h4>
 							<h2> 0% - 25% Consumo</h2>
 					</div>
 
@@ -168,14 +168,12 @@
 						<h4>Alerta Crítico Alto uso</h4>
 						<h2>85-100% Consumo</h2>
 					</div>
-					<div class="item-regua perigo-quente">
-						<h4>baixo nível de processamento</h4>
-						<h2> 0 - 20 MIPS </h2>
-					</div>
+			
 
 					<div class="item-regua alerta-memoria">
-						<h4>Alto uso da memoria</h4>
-						<h2> 75% - 100% </h2>
+						<h3>Consumo memória</h3>
+						<h4>Alerta alto uso</h4>
+						<h2> 75% - 100% Consumo</h2>
 					</div>
 
 				</div>
