fix - finalizando css grafico

--- a/Site/public/dash-estatica/cadastroMaquina.html
+++ b/Site/public/dash-estatica/cadastroMaquina.html
@@ -85,7 +85,7 @@
       <h4 class="hide">Atalhos</h4>
 
       <ul>
-        <li class="tooltip-element" data-tooltip="0">
+        <!-- <li class="tooltip-element" data-tooltip="0">
         <a href="./minhasInformacoes.html" data-active="4">
           <div class="icon">
             <i class='bx bx-user'></i>
@@ -93,7 +93,7 @@
           </div>
           <span class="link hide">Minhas informações</span>
         </a>
-        </li>
+        </li> -->
         <li class="tooltip-element" data-tooltip="1">
           <a href="https://app.pipefy.com/public/form/w7YSTr_A" data-active="5">
             <div class="icon">
@@ -118,7 +118,7 @@
       </a>
       <div class="admin-user tooltip-element" data-tooltip="1">
         <div class="admin-profile hide">
-          <img src="./imgs/foto-de-perfil.jpg" alt="">
+          <!-- <img src="./imgs/foto-de-perfil.jpg" alt=""> -->
           <div class="admin-info">
            
             <!-- <div class="hello">
