--- a/Site/public/dash-estatica/dash-cadastros.html
+++ b/Site/public/dash-estatica/dash-cadastros.html
@@ -6,10 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Keep Swimming | Cadastro Funcionário</title>
-  <script src="../assets/js/funcoes.js"></script>
   <link rel="shortcut icon" href="../assets/icons/leme.png" type="image/x-icon">
   <link rel="stylesheet" href="dash-cadastro.css">
   <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
+  <script src="../assets/js/funcoes.js"></script>
 
   <!-- <link rel="stylesheet" href="../public/css/tela-cadastro.css"> -->
 
@@ -113,10 +113,9 @@
         <div class="admin-profile hide">
           <img src="./img/face-1.png" alt="">
           <div class="admin-info">
-            <!-- <h3>var idEmpresa = sessionStorage.getItem('ID_USUARIO')</h3> -->
-            <!-- <div class="hello">
+            <div class="hello">
               <h3>Olá, <span id="b_usuario"></span>!</h3>
-            </div> -->
+            </div>
           </div>
         </div>
         <a href="#" class="log-out">
@@ -156,8 +155,6 @@
 
 
             </div>
-
-
 
             <div class="ladodireito">
               <label>Cargo</label>
