--- a/Site/public/dash-estatica/dashnova.html
+++ b/Site/public/dash-estatica/dashnova.html
@@ -68,7 +68,7 @@
           </a>
         </li>
         <li class="tooltip-element" data-tooltip="2">
-          <a href="#" data-active="2">
+          <a href="dash-cadastros.html" data-active="2">
             <div class="icon">
               <i class='bx bx-id-card'></i>
               <i class='bx bxs-id-card'></i>
