--- a/Site/public/dash-estatica/dashnova.html
+++ b/Site/public/dash-estatica/dashnova.html
@@ -173,7 +173,7 @@
 
                 <h4>Quantidade Sistemas linux:</h4>
                 <span id="valorLinux" class="vlrMinInf"></span>
-                <h4>Mau desempenho em Sistemas linux :</h4>
+                <h4>Mal desempenho em Sistemas linux :</h4>
                 <span id="valorLinux2" class="vlrMinInf"></span>
               </div>
 
@@ -189,7 +189,7 @@
 
                 <h4>Quantidade Sistema windows:</h4>
                 <span id="valorWind" class="vlrMinInf"></span>
-                <h4>Mau desempenho em Sistema windows:</h4>
+                <h4>Mal desempenho em Sistema windows:</h4>
                 <span id="valorWind2" class="vlrMinInf"></span>
               </div>
 
